# x-blog

./: .env.example  .gitignore  .rumdl.toml  LICENSE  Makefile  README.deploy.md  README.md  README.zh-CN.md  commitlint.config.js  docker-compose.yml  justfile  main.py  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
.husky/: pre-commit
backend/: .dockerignore  .env.example  Dockerfile  coverage.json  pyproject.toml  ruff.toml
backend/app/: auth.py  cache.py  config.py  crud.py  database.py  exceptions.py  init_admin.py  limiter.py  main.py  models.py  schemas.py  sentry.py
backend/app/middleware/: __init__.py  logging.py
backend/app/routers/: admin.py  categories.py  comments.py  export.py  health.py  posts.py  rss.py  search.py  stats.py  tags.py  upload.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_admin.py  test_admin_users.py  test_auth.py  test_auth_full.py  test_cache.py  test_categories.py  test_comments.py  test_comprehensive.py  test_config.py  test_crud.py  test_edge_cases.py  test_errors.py  test_exceptions.py  test_export.py  test_features.py  test_health.py  test_middleware.py  test_posts.py  test_ratelimit.py  test_rss.py  test_schemas.py  test_search.py  test_search_comprehensive.py  test_stats.py  test_tags.py  test_upload.py
docs/: deployment.md  x-blog-architecture.html
docs/superpowers/plans/: 2026-04-11-blog-backend.md  2026-04-11-blog-frontend.md  2026-04-11-code-quality.md  2026-04-11-image-upload.md  (+13 more)
frontend/: .dockerignore  .env.example  .gitignore  .lintstagedrc  Dockerfile  biome.json  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  opensearch.xml  page.test.tsx  page.tsx  robots.txt
frontend/components/: AnalyticsCharts.tsx  BackToTop.test.tsx  BackToTop.tsx  CommentForm.test.tsx  CommentForm.tsx  CommentList.test.tsx  CommentList.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  ImageLightbox.tsx  ImageLightboxContext.tsx  ImageUpload.tsx  LanguageSwitcher.tsx  LikeButton.test.tsx  LikeButton.tsx  LocaleSync.tsx  Markdown.test.tsx  Markdown.tsx  Mermaid.tsx  MobileFilterBar.tsx  Pagination.test.tsx  Pagination.tsx  PostCard.test.tsx  PostCard.tsx  PostForm.tsx  ReadingProgress.test.tsx  ReadingProgress.tsx  RelatedPosts.test.tsx  RelatedPosts.tsx  SearchBox.test.tsx  SearchBox.tsx  SearchResults.tsx  ShareButtons.test.tsx  ShareButtons.tsx  Sidebar.tsx  Skeleton.test.tsx  (+9 more)
frontend/e2e/: admin-comments.spec.ts  admin-stats.spec.ts  admin.spec.ts  category-filter.spec.ts  comments.spec.ts  homepage.spec.ts  pagination.spec.ts  playwright.config.ts  posts.spec.ts  search.spec.ts  seo-i18n.spec.ts
frontend/lib/: api.enhanced.test.ts  api.errors.test.ts  api.test.ts  api.ts  auth-context.tsx  hooks.test.tsx  hooks.ts  i18n.test.ts  i18n.ts  pwa.test.ts  query-client.ts  reading-time.test.ts  reading-time.ts  theme.test.ts  use-translations.ts  utils.comprehensive.test.ts
frontend/mocks/: handlers.ts
frontend/public/: manifest.json  mockServiceWorker.js
frontend/tests/: BackToTop.test.tsx  ImageLightbox.test.tsx  Pagination.test.tsx  PostForm.test.tsx  TableOfContents.test.tsx  test-utils.tsx
frontend/types/: index.ts
(+63 files in other folders)
