[project]
name = "x-blog-backend"
version = "0.1.0"
description = "X-Blog Backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
    "pytest-xdist>=3.8.0",
    "cachetools>=5.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:slowapi",
    "ignore::DeprecationWarning:_pytest",
]
