[project]
name = "x-blog-backend"
version = "0.1.0"
description = "X-Blog Backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
    "pytest-xdist>=3.8.0",
    "cachetools>=5.5.0",
    "sentry-sdk>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:slowapi",
    "ignore::DeprecationWarning:_pytest",
]

[tool.cov.report]
precision = 2
show_missing = true
skip_covered = false

[tool.cov.run]
branch = true
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.cov.html]
directory = "htmlcov"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "type: ignore",
    "pragma: no cover",
    # Pydantic excluded patterns
    "if field_value is ...:",
    "raise ValueError",
]

[tool.coverage.branches]
fail_under = 50

[tool.coverage.functions]
fail_under = 50

[tool.coverage.lines]
fail_under = 60
